--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,4 @@ $secondary-color: rgb(239, 248, 254);
 $terciary-color: rgb(189, 213, 234);
 $text-color: rgb(62, 81, 111);
 $second-text-color: rgb(51, 61, 72);
+$light-background: white;
