--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -7,17 +7,39 @@
   background: $terciary-color;
   letter-spacing: 0.1rem;
 }
+@mixin reset-btn {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  padding: 0;
+  letter-spacing: 0.1rem;
+
+}
+
+@mixin menu-link {
+  color: $text-color;
+    font-weight: map-get($font-weights, bold);
+    text-decoration: none;
+    z-index: 3;
+    position: relative;
+    padding-bottom: 2px;
+}
+@mixin menu-link-after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 26px;
+  background-color: #C5E6FB;
+  width: 0%;
+  display: block;
+  transition: width .3s ease-in-out;
+}
 
 @mixin input-form {
   padding: 0.6rem 2.5rem 0.6rem 0.6rem;
   width: 100%;
-}
-
-@mixin input-form-small {
-  width: 100%;
-  max-width: 500px;
-  margin: 0;
-  padding: 0.5rem 1rem;
 }
 
 @mixin link-style($weight) {
