--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,10 +6,17 @@ $second-text-color: rgb(51, 61, 72);
 $light-background: white;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
-$small-breakpoint: 400px;
+$xsmall-breakpoint: 400px;
+$small-breakpoint: 576px;
 $medium-breakpoint: 768px;
 
 $font-sizes: (
-    heading2: 1.6em,
-    normal: 1em
-)
+    "heading2": 1.6em,
+    "normal": 1em,
+    "medium": 1.2em,
+);
+$font-weights: (
+    "normal": 400,
+    "bold": 500,
+    "bolder": 600,
+);
