--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 @import "~normalize.css";
 @import "@/scss/_variables.scss";
+@import '@/scss/_mixins.scss';
 body {
     margin: 0;
     box-sizing: border-box;
@@ -9,4 +10,43 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $text-color;
+}
+.form {
+  padding-top: 2rem;
+  &_group {
+    padding-bottom: 2rem;
+    &_input-div {
+      width: 100%;
+      position: relative;
+      input {
+      @include input-form;
+      box-sizing: border-box;
+     }
+    }
+  }
+  .show-password {
+    position: absolute;
+    top: 12px;
+    right: 16px;
+    width: 1.3rem;
+    background: none;
+    color: inherit;
+    border: none;
+    outline: inherit;
+    cursor: pointer;
+    padding : 0;
+    &:focus {
+      outline-width: 2px;
+      outline-style: solid;
+      outline-color: $text-color;
+      padding: 1px;
+    }
+  }
+}
+.btn {
+  @include btn;
+  &:hover, &:focus {
+    box-shadow: $primary-btn-shadow;
+  }
+  
 }
