personal info account layout

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,9 +6,11 @@ $second-text-color: rgb(51, 61, 72);
 $light-background: white;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
+$xxs-breakpoint: 300px;
 $xsmall-breakpoint: 415px;
 $small-breakpoint: 576px;
 $medium-breakpoint: 768px;
+$large-breakpoint: 992px;
 
 $font-sizes: (
     "heading2": 1.6em,
