--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
-$primary-color: rgb(254, 45, 2);
-$secondary-color: rgb(239, 248, 254);
-$terciary-color: rgb(189, 213, 234);
-$text-color: rgb(62, 81, 111);
-$second-text-color: rgb(51, 61, 72);
+$primary-color: #FE2D02;
+$secondary-color: #EFF8FE;
+$terciary-color: #BDD5EA;
+$text-color: #3E516F;
+$second-text-color: #333D48;
 $light-background: white;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
