succes upload msg and delete profile pic

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,8 +5,8 @@ $text-color: #3E516F;
 $second-text-color: #333D48;
 $light-background: white;
 $medium-light-background: hsla(211, 0%, 70%, 0.2);
-$error-form: #970C0C;
-$valid-form: #0BC10B;
+$error: #970C0C;
+$valid: #0BC10B;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
 $xxs-breakpoint: 300px;
