create post and show posts in user content page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -71,3 +71,8 @@ input.valid {
 .btn-div {
   text-align: center;
 }
+//Heading in Home page and user content
+.content_heading {
+  text-align: center;
+  margin-top: 3rem;
+}
