focus indicators style

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $light-background: white;
 $medium-light-background: hsla(211, 0%, 70%, 0.2);
 $error: #970C0C;
 $valid: #0BC10B;
+$focus-indicator: #0000FF;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
 $xxs-breakpoint: 300px;
