--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: $text-color;
 }
+a:focus-visible {
+  outline: 2px solid $focus-indicator;
+  height: fit-content;
+  padding: 0.2rem
+}
+button:focus-visible {
+  outline: 2px solid $focus-indicator;
+}
 .form {
   padding-top: 2rem;
   &_group {
