--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $medium-light-background: hsla(211, 0%, 70%, 0.2);
 $error: #970C0C;
 $valid: #0BC10B;
 $focus-indicator: #0000FF;
+$focus-indicator-offset: -5px;
 $primary-btn-shadow: 2px 1px 5px 1px scale-color($text-color, $saturation: 30%);
 $hover-classic-link: underline;
 $xxs-breakpoint: 300px;
