--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,6 +19,7 @@ a:focus-visible {
 }
 button:focus-visible {
   outline: 2px solid $focus-indicator;
+  outline-offset: $focus-indicator-offset;
 }
 //for the form
 .form {
