--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,6 +28,7 @@
       content: '';
       position: absolute;
       left: 0;
+      top: -4px;
       height: 26px;
       background-color: #C5E6FB;
       width: 0%;
@@ -54,7 +55,15 @@
     color: $primary-color;
   }
 }
-
+//for the like and comments btn
+@mixin card-btns {
+  width: 100%;
+  background: $secondary-color;
+  border: none;
+  cursor: pointer;
+  padding: 0.3rem 0.3rem 0.5rem;
+}
+//accessible hiding elements
 @mixin visually-hidden {
   border: 0;
   padding: 0;
