--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: $text-color;
 }
+main {
+  background-color: $main-background;
+}
 //focus indicator
 a:focus-visible {
   outline: 2px solid $focus-indicator;
