--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -13,7 +13,15 @@
   background-color: transparent;
   padding: 0;
   letter-spacing: 0.1rem;
+}
 
+@mixin options-btn {
+  cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 8px;
+  border: 1px solid;
+  letter-spacing: 0.03rem;
+  font-weight: map-get($font-weights, bold);
 }
 
 @mixin menu-link($px) {
