toast deleted post

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -128,6 +128,141 @@ input.valid {
     width: 40%;
   }
 }
-.post-created {
-  margin-top: 1rem;
+
+/* 
+*******  For the toast notification *******
+*/ 
+.fade-enter-active, .fade-leave-active {
+  transition: all 0.8s ease-in-out;
+}
+.fade-enter-from {
+  transform: translateX(-100%);
+  opacity: 0;
+}
+.fade-enter-to, .fade-leave-from  {
+  transform: translateX(0);
+  opacity: 1;
+}
+.fade-leave-to {
+  transform: translateX(-100%);
+  opacity: 0;
+}
+.surprise-icon {
+  .st0 {
+    fill: #fdca47;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-miterlimit: 10;
+  }
+  .st1 {
+    fill: #20201e;
+  }
+  .st2 {
+    fill: #d05f58;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
+  .st3 {
+    fill: #ffffff;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
+  .st4 {
+    fill: none;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+  .st5 {
+    fill: #ffffff;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+  .st6 {
+    fill: #d05f58;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+  .st7 {
+    fill: none;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
+}
+.smile-icon {
+  .st0 {
+    fill: #fdca47;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-miterlimit: 10;
+  }
+
+  .st1 {
+    fill: #20201e;
+  }
+
+  .st2 {
+    fill: #d05f58;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
+
+  .st3 {
+    fill: #ffffff;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
+
+  .st4 {
+    fill: none;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+
+  .st5 {
+    fill: #ffffff;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+
+  .st6 {
+    fill: #d05f58;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-miterlimit: 10;
+  }
+
+  .st7 {
+    fill: none;
+    stroke: #231f20;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+  }
 }
