--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 @import "~normalize.css";
 @import "@/scss/_variables.scss";
 @import '@/scss/_mixins.scss';
+
 body {
     margin: 0;
     box-sizing: border-box;
@@ -14,8 +15,25 @@ body {
 main {
   background-color: $main-background;
 }
+
+// ***  Skip link  ****
+.skip-link {
+  background: $text-color;
+  color: #fff;
+  font-weight: 700;
+  left: 2%;
+  padding: 1rem;
+  position: absolute;
+  transform: translateY(-100%);
+  outline: 2px solid #fff;
+  outline-offset: -7px;
+}
+.skip-link:focus {
+  transform: translateY(20%);
+}
+
 //focus indicator
-a:focus-visible {
+a:not(.skip-link):focus-visible {
   outline: 2px solid $focus-indicator;
   height: fit-content;
   padding: 0.2rem
